[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant"
version = "0.5.0"
description = "TurboQuant: KV-cache compression for MLX on Apple Silicon"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "mlx>=0.20.0",
    "mlx-lm>=0.15.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
eval = [
    "openai>=1.0.0",
    "datasets>=2.0.0",
]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
